cambios en el modulo de encuesta

--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -656,10 +656,10 @@
             </div>
 
             <div class="footer-text">
-                <strong data-i18n="brand"></strong>
-                <span data-i18n="registered"></span>
-                <strong data-i18n="company"></strong>.
-                <span data-i18n="rights"></span>
+                <strong>Cheetah Research</strong>
+                <span> es una marca registrada de </span>
+                <strong>Marketing Total S.A.</strong>
+                <span> Todos los derechos reservados.</span>
             </div>
 
         </div>
