cambios en el footer de pagina de encuesta

--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -20,6 +20,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <style>
+        
         .disabled {
             pointer-events: none;
             opacity: 0.6;
@@ -653,13 +654,14 @@
                         </div>
                     </div>
                 </form>
-            </div>
-
-            <div class="footer-text">
-                <strong>Cheetah Research</strong>
-                <span> es una marca registrada de </span>
-                <strong>Marketing Total S.A.</strong>
-                <span> Todos los derechos reservados.</span>
+                
+                <!-- Footer dentro del contenedor con scroll -->
+                <div class="footer-text">
+                    <strong>Cheetah Research</strong>
+                    <span> es una marca registrada de </span>
+                    <strong>Marketing Total S.A.</strong>
+                    <span> Todos los derechos reservados.</span>
+                </div>
             </div>
 
         </div>
