gradiente de colores en paginas de login, register y forgot-password

--- a/Modulo De config/login.html
+++ b/Modulo De config/login.html
@@ -25,7 +25,7 @@
     <style>
         /* Modern page styling - BASE */
         body {
-            background: linear-gradient(135deg, var(--bs-CR-orange) 0%, #ff8c42 100%) !important;
+            background: linear-gradient(15deg, var(--bs-CR-orange) 0%, #000000 100%) !important;
             min-height: 100vh;
         }
 
