--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -28,7 +28,7 @@
 
         /* Modern page styling - BASE */
         body {
-            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+            background: linear-gradient(15deg, var(--bs-CR-orange) 0%, #000000 100%) !important;
             min-height: 100vh;
         }
 
