--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -193,7 +193,7 @@
 
         .control-group label {
             font-family: hedliner !important;
-            font-weight: 600;
+            font-weight: bold;
             color: #333;
             margin-bottom: 8px;
             font-size: 14px;
@@ -203,7 +203,7 @@
             border-radius: 10px;
             border: 2px solid #e9ecef;
             padding: 10px 15px;
-            font-family: IBM Plex Sans !important;
+            font-family: hedliner !important;
             font-size: 14px;
             transition: all 0.3s ease;
             background: white;
