--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -40,6 +40,7 @@
         
         /* Modern page styling - BASE */
         body {
+            background: linear-gradient(15deg, var(--bs-CR-orange) 0%, #000000 100%) !important;
             min-height: 100vh;
         }
 
