--- a/Modulo De config/HerramientasDelAdministrador.html
+++ b/Modulo De config/HerramientasDelAdministrador.html
@@ -30,7 +30,6 @@
         
         /* Modern page styling - BASE */
         body {
-            background: linear-gradient(15deg, var(--bs-CR-orange) 0%, #000000 100%) !important;
             min-height: 100vh;
         }
 
@@ -182,7 +181,7 @@
 <body id="page-top" style="overflow-y: hidden;">
     <div id="wrapper">
         
-        <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-end sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;background: var(--bs-CR-orange-2);">
+        <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 10px; border-bottom-right-radius: 10px; background: #000000;">
             <div class="container-fluid d-flex flex-column p-0">
                 <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/home/"><img style="height: auto;width: 189px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" /></a>
                 <p class="text-light" id="nombreProyectoLbl" style="font-family: 'hedliner', sans-serif;font-size: 12px;margin-left: 10px;"></p>
@@ -251,6 +250,12 @@
                     </li>
                 </ul>
             </div>
+            <!-- Test de Idiomas -->
+            <select id="languageSwitcher" style="display: none; margin: 10px;">
+                <option value="es">Español</option>
+                <option value="en">English</option>
+                <option value="pt">Português</option>
+            </select>
         </nav>
 
         <div class="d-flex flex-column" id="content-wrapper">
