--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -538,9 +538,9 @@
                                 </div>
                                 
                                 <!-- Tabla de encuestas -->
-                                <div id="tableContainer" class="table-responsive" style="display: none;">
-                                    <table class="table table-striped table-hover" style="font-family: hedliner;">
-                                        <thead class="table-dark">
+                                <div id="tableContainer" class="table-responsive" style="display: none; max-height: 60vh; overflow-y: auto; border: 1px solid #dee2e6; border-radius: 8px;">
+                                    <table class="table table-striped table-hover" style="font-family: hedliner; margin-bottom: 0;">
+                                        <thead class="table-dark" style="position: sticky; top: 0; z-index: 10;">
                                             <tr>
                                                 <th scope="col" style="width: 10%;">ID</th>
                                                 <th scope="col" style="width: 15%;">Rating</th>
