--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -29,6 +29,55 @@
             --bs-text-opacity: 1;
             color: rgb(0, 0, 0) !important;
         }
+
+        /* Overlay moderno con blur oscurecido */
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 99999;
+        }
+
+        #overlay[style*="display: flex"] { display: flex !important; }
+
+        #overlayContent {
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 20px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+            max-width: 800px;
+            width: 90%;
+            padding: 24px;
+            position: relative;
+        }
+
+        /* Inputs modernos para OTP y correo */
+        .cr-input {
+            width: 75%;
+            border-radius: 12px;
+            border: 2px solid #e9ecef;
+            padding: 12px 16px;
+            font-family: IBM Plex Sans, sans-serif !important;
+            font-size: 16px;
+            transition: all 0.3s ease;
+            background: white;
+            color: #212529;
+        }
+        .cr-input:focus {
+            border-color: var(--bs-CR-orange);
+            box-shadow: 0 0 0 0.2rem rgba(255, 140, 66, 0.25);
+            outline: none;
+        }
         
         /* Modern page styling - BASE */
         body {
