--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -85,7 +85,7 @@
         }
 
         /* Input bar moderna */
-        #TypeB-BG { border-radius: 15px; background: var(--bs-CR-gray-dark); }
+        #TypeB-BG { border-radius: 15px; background: var(--bs-CR-gray-dark); box-shadow: 0 8px 24px rgba(0,0,0,0.15); }
         #Message-Input {
             font-family: 'IBM Plex Sans', sans-serif;
             outline: none; height: 100%; width: 100%; resize: none;
@@ -155,8 +155,8 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-center" style="margin-right: 20px;">
-                        <button id="exportChatBtn" class="btn btn-sm" style="background: var(--bs-CR-orange); color: white; border: none; border-radius: 8px; padding: 8px 15px; font-family: hedliner; display: none;" title="Exportar conversación a PDF">
-                            <i class="fas fa-download" style="margin-right: 5px;"></i>
+                        <button id="exportChatBtn" class="btn btn-primary btn-sm" style="display: none;" data-bs-toggle="tooltip" data-bs-placement="left" title="Exportar conversación a PDF">
+                            <i class="fas fa-download" style="margin-right: 6px;"></i>
                             Exportar Chat
                         </button>
                     </div>
@@ -192,11 +192,11 @@
                     <div class="row justify-content-center align-items-center align-content-center order-3" id="Type-Box" style="background: rgba(170,167,170,0.16);padding-top: 6px;padding-right: 5px;padding-bottom: 6px;padding-left: 5px;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
                         <div class="col align-content-center" id="TypeB-Container" style="height: 100%;">
                             <div class="row" id="TypeB-BG" style="border-radius : 13px;background: var(--bs-CR-gray-dark);">
-                                <div class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-8 col-xxl-9 p-0" style="height: 100%;"><textarea id="Message-Input" class="align-content-center border-0" placeholder="Escribir Mensaje..." style="font-family: League Spartan;outline: none; height: 100%;width: 100%;border-radius : 13px;resize: none;padding-left: 10px;background: #ffffff;color: #072934;"></textarea></div>
-                                <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-flex d-md-flex flex-fill justify-content-center align-items-center align-content-center p-0 col-1" id="btIMG-Cont" style="height: 100%;margin-right: 0px;border-top-left-radius: 10px;border-bottom-left-radius: 10px;"><button class="btn justify-content-center align-items-center align-content-center mx-auto" id="btIMG" type="button" style="border-radius : 13px;width: 100%;height: 100%;padding: 0px 0px;padding-right: 0px;position: relative;overflow: hidden; display: none;"><input type="file" accept="image/*" id="fileInput" style="display:none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-image-fill" id="imageIcon" style="display: flex;">
+                                <div class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-8 col-xxl-9 p-0" style="height: 100%;"><textarea id="Message-Input" class="align-content-center border-0" placeholder="Escribe tu mensaje para Sócrates... (Enter para enviar, Shift+Enter salto de línea)"></textarea></div>
+                                <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-flex d-md-flex flex-fill justify-content-center align-items-center align-content-center p-0 col-1" id="btIMG-Cont" style="height: 100%;margin-right: 0px;border-top-left-radius: 10px;border-bottom-left-radius: 10px;"><button class="btn btn-primary justify-content-center align-items-center align-content-center mx-auto" id="btIMG" type="button" style="border-radius : 13px;width: 100%;height: 100%;padding: 0;position: relative;overflow: hidden; display: none;"><input type="file" accept="image/*" id="fileInput" style="display:none;"><i class="fas fa-image" id="imageIcon" style="display: flex;"></i>
                                             <path d="M.002 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-12a2 2 0 0 1-2-2V3zm1 9v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V9.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12zm5-6.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0"></path>
                                         </svg><img class="flash animated" id="imageInput" style="display:none;max-width:150%;object-fit:cover;position:absolute;"></button></div>
-                                <div class="col-auto col-sm-1 col-md col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-md-flex justify-content-md-end p-0" id="btSend-Cont" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;min-width: 50px;height: 100%;margin-right: 0px;position: static;"><button class="btn float-end h-100" id="btSend" type="button" style="border-radius : 13px;width: 100%;border-style: none;border-color: #2e2e2e;border-bottom-style: none;"><i class="fab fa-telegram-plane" id="btSend-Icon" style="color: var(--bs-CR-gray);"></i></button></div>
+                                <div class="col-auto col-sm-1 col-md col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-md-flex justify-content-md-end p-0" id="btSend-Cont" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;min-width: 50px;height: 100%;margin-right: 0px;position: static;"><button class="btn btn-primary float-end h-100" id="btSend" type="button" style="border-radius : 13px;width: 100%;border-style: none;"><i class="fab fa-telegram-plane" id="btSend-Icon" style="color: #fff;"></i></button></div>
                             </div>
                         </div>
                     </div>
@@ -210,6 +210,15 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script>
+        // Inicializar tooltips Bootstrap
+        document.addEventListener('DOMContentLoaded', function () {
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+            tooltipTriggerList.map(function (tooltipTriggerEl) {
+                return new bootstrap.Tooltip(tooltipTriggerEl)
+            })
+        });
+    </script>
     <script>
         function getParameterByName(name) {
             const urlParams = new URLSearchParams(window.location.search);
