--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -648,7 +648,7 @@
                                 <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 100%;margin-top: 10px;font-family: hedliner;">
                                     <button class="btn btn-info d-block w-100" id="analyzeSurveysBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);">
                                         <i class="fas fa-chart-line"></i>
-                                        Analizar Encuestas
+                                        Control de Calidad
                                     </button>
                                 </div>
                                 <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 100%;margin-top: 10px;font-family: hedliner;">
